src-ken&y/objects/Fixed_Asset_Depreciation__c.object
<CustomObject>
    <customHelpPage>HelpFixedAssets</customHelpPage>
    <description>Records depreciation amounts and dates for fixed assets over time.</description>
    <fields>
        <fullName>Accounting_Subtype__c</fullName>
        <label>Accounting Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>Depreciation</fullName>
                </value>
                <value>
                    <fullName>Retire</fullName>
                </value>
                <value>
                    <fullName>Residual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Fixed Asset Depreciations</relationshipLabel>
        <relationshipName>Fixed_Asset_Depreciations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Fixed Asset Depreciations</relationshipLabel>
        <relationshipName>Fixed_Asset_Depreciations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Depreciation_Amount__c</fullName>
        <description>The amount that the asset has been depreciated for the specified period.</description>
        <label>Depreciation Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depreciation_Date__c</fullName>
        <description>The date on which the depreciation is assessed.</description>
        <label>Depreciation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depreciation_Key__c</fullName>
        <description>This key is used to enforce unique depreciation records for accounting records.</description>
        <externalId>true</externalId>
        <label>Depreciation Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Depreciation_Type__c</fullName>
        <description>This is the algorithm used to model the depreciation for the asset.</description>
        <inlineHelpText>This is the algorithm used to model the depreciation for the asset.</inlineHelpText>
        <label>Depreciation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight Line</fullName>
                </value>
                <value>
                    <fullName>Double Declining</fullName>
                </value>
                <value>
                    <fullName>Sum of Years</fullName>
                </value>
                <value>
                    <fullName>MACRS</fullName>
                </value>
                <value>
                    <fullName>CIP</fullName>
                </value>
                <value>
                    <fullName>Residual</fullName>
                </value>
                <value>
                    <fullName>Retire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <description>Finalized Date is the date when the document is finalized.</description>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finalized_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalized Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is set to true when the invoice is finalized and no more changes are expected</description>
        <label>Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <description>The fixed asset that this depreciation is applied to.</description>
        <label>Fixed Asset</label>
        <referenceTo>Fixed_Asset__c</referenceTo>
        <relationshipLabel>Fixed Asset History</relationshipLabel>
        <relationshipName>Fixed_Asset_Depreciations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to GL Account</description>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GL_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GL_Account__c</referenceTo>
        <relationshipLabel>Fixed Asset Depreciations</relationshipLabel>
        <relationshipName>Fixed_Asset_Depreciations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GL_Date__c</fullName>
        <description>This is the date that the accounting entry will be made for the depreciation cycle.</description>
        <label>GL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subtransaction_Type__c</fullName>
        <label>Subtransaction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <description>Transaction Currency of this Fixed Asset Depreciation.</description>
        <label>Transaction Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow depending on customer need.</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_upon_Depreciation__c</fullName>
        <description>The value of the asset at the time the depreciation amount is applied.</description>
        <label>Value upon Depreciation</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <label>Fixed Asset Depreciation</label>
    <nameField>
        <label>Fixed Asset Depreciation Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fixed Asset Depreciations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>